<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginMainAcitivity" >

    <TextView
        android:id="@+id/txtWelcomeMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        style="@style/WelcomeLineOnEachPage"
        android:text="@string/txtWelcomeMessage" />

    <TextView
        android:id="@+id/txtTagLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtWelcomeMessage"
        android:layout_marginTop="10dp"
        style="@style/WelcomeLineOnEachPage"
        android:text="@string/txtTagLine"  />
   
    <!-- Table -->
 	<TableLayout 
    android:id="@+id/tblLogin"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/txtTagLine" >
 
    <!-- First USer Row -->
    <TableRow
        android:id="@+id/tblLoginRowUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
 
    		<TextView
            android:id="@+id/lblUser"
            android:text="@string/lblUser" />
       		
       		<Spinner
	        android:id="@+id/spinnerUser"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:entries="@array/spinnerUserArray" />
    </TableRow>
    
        <!-- Second Row Username -->
    <TableRow
        android:id="@+id/tblLoginRowUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
    		<TextView
            android:id="@+id/lblUserName"
            android:text="@string/lblUserName" />
    		
    		<EditText
	        android:id="@+id/eTxtUserName"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
       		
    </TableRow>
    
    		 <!-- Third Row Password -->
    <TableRow
        android:id="@+id/tblLoginRowPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
    		<TextView
            android:id="@+id/lblPassword"
            android:text="@string/lblPassword" />
    		
    		<EditText
	        android:id="@+id/eTxtPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />
       		
    </TableRow>
    
 </TableLayout>
    
  
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tblLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/btnLogin" />

</RelativeLayout>
